# music-tag-native

./: .gitignore  Cargo.toml  README.md  browser.js  index.d.ts  index.js  music-tag-native.wasi-browser.d.ts  music-tag-native.wasi-browser.js  music-tag-native.wasi.cjs  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test.ts  tsconfig.json
.github/workflows/: CI.yml
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/wasm32-wasi/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: index.html  index.ts  tsconfig.json
samples/: flac.flac  ogg.opus
scripts/: setup-trusted-publish.sh
src/: helper.rs  lib.rs  meta_picture.rs  music_file.rs  properties.rs  tag.rs  tagged_file.rs  tagger.rs  tests.rs  utils.rs
src/tagged_file/: helper.rs  properties.rs  tag.rs
src/tests/: file.rs  meta_picture.rs  metadata.rs  properties.rs  tag_type.rs  (+1 more)
test/: action.test.ts  const.ts  format.test.ts  meta.test.ts  picture.test.ts  property.test.ts
