[package]
authors = ["subframe7536 <1667077010@qq.com>"]
edition = "2021"
name = "music_tag_native"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lofty = "0.23"
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = "symbols"
